--- a/src/client-hpo/src/styles/app.css
+++ b/src/client-hpo/src/styles/app.css
@@ -1,3 +1,33 @@
 html {
   font-family: "Roboto", sans-serif;
 }
+
+.loader-wrap {
+  display: flex;
+}
+
+.loader-wrap > .loader {
+  margin: auto;
+  border-radius: 50%;
+  -webkit-animation: spin 0.75s linear infinite; /* Safari */
+  animation: spin 0.75s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
